# imgui-softrender

./: CMakeLists.txt  LICENSE  imgui-softrender-config.cmake.in  testrender.cpp
imgui/: imgui_softrender.cpp  imgui_softrender.h
imgui/softrender/: texture.h
